Fixed input and select appearances on firefox

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -23,6 +23,17 @@
 @import 'commons/margins.less';
 @import 'commons/paddings.less';
 
+input[type=number] {
+  -moz-appearance:textfield;
+}
+
+select {
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    text-indent: 0.01px;
+    text-overflow: '';
+}
+
 /**
  * Typography
  */
